; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/system/ota/advanced_https_ota/main/extr_advanced_https_ota_example.c_validate_image_header.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/system/ota/advanced_https_ota/main/extr_advanced_https_ota_example.c_validate_image_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@ESP_ERR_INVALID_ARG = common dso_local global i64 0, align 8
@ESP_OK = common dso_local global i64 0, align 8
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"Running firmware version: %s\00", align 1
@.str.1 = private unnamed_addr constant [79 x i8] c"Current running version is the same as a new. We will not continue the update.\00", align 1
@ESP_FAIL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_4__*)* @validate_image_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @validate_image_header(%struct.TYPE_4__* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_4__, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = icmp eq %struct.TYPE_4__* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i64, i64* @ESP_ERR_INVALID_ARG, align 8
  store i64 %9, i64* %2, align 8
  br label %35

10:                                               ; preds = %1
  %11 = call i32* (...) @esp_ota_get_running_partition()
  store i32* %11, i32** %4, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = call i64 @esp_ota_get_partition_description(i32* %12, %struct.TYPE_4__* %5)
  %14 = load i64, i64* @ESP_OK, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %21

16:                                               ; preds = %10
  %17 = load i32, i32* @TAG, align 4
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @ESP_LOGI(i32 %17, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 %19)
  br label %21

21:                                               ; preds = %16, %10
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i64 @memcmp(i32 %24, i32 %26, i32 4)
  %28 = icmp eq i64 %27, 0
  br i1 %28, label %29, label %33

29:                                               ; preds = %21
  %30 = load i32, i32* @TAG, align 4
  %31 = call i32 @ESP_LOGW(i32 %30, i8* getelementptr inbounds ([79 x i8], [79 x i8]* @.str.1, i64 0, i64 0))
  %32 = load i64, i64* @ESP_FAIL, align 8
  store i64 %32, i64* %2, align 8
  br label %35

33:                                               ; preds = %21
  %34 = load i64, i64* @ESP_OK, align 8
  store i64 %34, i64* %2, align 8
  br label %35

35:                                               ; preds = %33, %29, %8
  %36 = load i64, i64* %2, align 8
  ret i64 %36
}

declare dso_local i32* @esp_ota_get_running_partition(...) #1

declare dso_local i64 @esp_ota_get_partition_description(i32*, %struct.TYPE_4__*) #1

declare dso_local i32 @ESP_LOGI(i32, i8*, i32) #1

declare dso_local i64 @memcmp(i32, i32, i32) #1

declare dso_local i32 @ESP_LOGW(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
